<resources>
    <string name="app_name">Eratani</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_acc">Enter your\nAccount</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="choose_your_status">Choose your status</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_here">Enter here</string>
    <string name="default_value_heart">0 ms</string>
    <string name="search_here">Search here</string>
</resources>